* ltmain.in: Reverted this change of Alexandre's from the 1999-01-25; "don't try to use .o instead of .lo just because there's no PIC flag.  It loses if --disable-static, and there's not much point if we're referring to the same file anyway...", because not all linkers will accept .lo object names. * ltmain.in: In the case where --disable-static is specified (as noted in Alexandre's log entry), we just link some .o files to prevent the original error. Reported by Andrey Slepuhin <pooh@msu.ru>

--- a/ltmain.in
+++ b/ltmain.in
@@ -1820,6 +1820,16 @@ EOF
 	  linknames="$linknames $link"
 	done
 
+	# Ensure that we have .o objects for linkers which dislike .lo
+	# (e.g. aix) incase we are running --disable-static
+        for obj in $libobjs; do
+          oldobj=`echo $obj | $Xsed -e "$lo2o"`
+          test -f $oldobj || ${LN_S} $obj $oldobj
+        done
+
+	# Use standard objects if they are pic
+        test -z "$pic_flag" && libobjs=`$echo "X$libobjs" | $SP2NL | $Xsed -e "$lo2o" | $NL2SP`
+
 	if test -n "$whole_archive_flag_spec"; then
 	  if test -n "$convenience"; then
 	    eval libobjs=\"\$libobjs $whole_archive_flag_spec\"
