* ltconfig.in: new config.guess returns *-*-cygwin now instead of *-*-cygwin32.  sed -e 's%(cygwin|mingw)32%1%g' ltconfig.in * ltmain.in:   sed -e 's%(cygwin|mingw)32%1%g' ltmain.in
* ltconfig.in (hardcode_libdir_flag_spec, allow_undefined_flag,
archive_cmds, archive_sym_cmds, old_archive_from_new_cmds):
removed duplication of config by assuming that `test $with_gcc =
yes' implies gnu ld, otherwise MSVC++ (which I haven't tested
since I inheritted the code from Ian Lance Taylor btw!) is implied.

--- a/ltmain.in
+++ b/ltmain.in
@@ -608,7 +608,7 @@ compiler."
     C_compiler="$CC" # save it, to compile generated C sources
     CC="$nonopt"
     case "$host" in
-    *-*-cygwin32* | *-*-mingw32* | *-*-os2*)
+    *-*-cygwin* | *-*-mingw* | *-*-os2*)
       # It is impossible to link a dll without this setting, and
       # we shouldn't force the makefile maintainer to figure out
       # which system we are compiling for in order to pass an extra
@@ -847,7 +847,7 @@ compiler."
 	deplibs="$deplibs $arg"
 	lib_search_path="$lib_search_path `expr $arg : '-L\(.*\)'`"
 	case "$host" in
-	*-*-cygwin32* | *-*-mingw32* | *-*-os2*)
+	*-*-cygwin* | *-*-mingw* | *-*-os2*)
 	  dllsearchdir="`expr $arg : '-L\(.*\)'`"
 	  dllsearchdir=`cd "$dllsearchdir" && pwd || echo "$dllsearchdir"`
 	  if test -n "$dllsearchpath"; then
@@ -1395,7 +1395,7 @@ compiler."
 	fi
 
 	case "$host" in
-	*-*-cygwin32* | *-*-mingw32* | *-*-os2*)
+	*-*-cygwin* | *-*-mingw* | *-*-os2*)
 	  # these systems don't actually have a c library (as such)!
 	  ;;
 	*)
@@ -2073,7 +2073,7 @@ EOF
 		  if test "$hardcode_direct" = no; then
 		    compile_command="$compile_command $dir/$linklib"
 		    case "$host" in
-		    *-*-cygwin32* | *-*-mingw32* | *-*-os2*)
+		    *-*-cygwin* | *-*-mingw* | *-*-os2*)
 		      compile_dependencylibs="$compile_dependencylibs -L$dir -l$name"
 		      dllsearchdir=`cd "$dir" && pwd || echo "$dir"`
 		      if test -n "$dllsearchpath"; then
@@ -2737,7 +2737,7 @@ else
       # Run the actual program with our arguments.
 "
 	case $host in
-	*-*-cygwin32* | *-*-mingw32 | *-*-os2*)
+	*-*-cygwin* | *-*-mingw | *-*-os2*)
 	  # win32 systems need to use the prog path for dll
 	  # lookup to work
 	  $echo >> $output "\
