* libtool.m4 (ac_cv_sys_global_symbol_pipe): accept TAB in addition to space as separator, and allow more than one space between the symbol code and the symbol name; HP/UX's nm, for example, uses two spaces * ltconfig.in (global_symbol_pipe): ditto (bsdi4, deplibs_check_method): variable name was misspelled * libltdl/configure.in (libltdl_cv_preloaded_symbols): rewrite test, so as not to depend on the way global_symbol_pipe is initialized; the current test would get false positives, as global_symbol_pipe was initialized `x=""', not `x='

--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -84,11 +84,19 @@ AC_CHECK_FUNCS(strdup strchr strrchr index rindex)
 
 AC_CACHE_CHECK([whether libtool supports -dlopen/-dlpreopen],
        libltdl_cv_preloaded_symbols, [dnl
-  if grep '^global_symbol_pipe=..*$' ./libtool >/dev/null; then
-    libltdl_cv_preloaded_symbols=yes
-  else
-    libltdl_cv_preloaded_symbols=no
-  fi
+  (
+    rm -f conftest
+    ./libtool --config > conftest
+    . ./conftest
+    rm -f conftest
+    if test -n "$global_symbol_pipe"; then
+      echo yes > conftest
+    else
+      echo no > conftest
+    fi
+  )
+  libltdl_cv_preloaded_symbols=`cat conftest`
+  rm -f conftest
 ])
 if test x"$libltdl_cv_preloaded_symbols" = x"yes"; then
   AC_DEFINE(HAVE_PRELOADED_SYMBOLS)
