* ltconfig.in (irix5*, hardcode_libdir_separator): set it to a colon, because on IRIX 5 only the last -rpath switch prevails, and it can be a list of colon-separated directories.  This change will affect irix6 too, but that's not a problem.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1230,6 +1230,7 @@ else
       archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring $libobjs $deplibs $linkopts'
     fi
     hardcode_libdir_flag_spec='${wl}-rpath ${wl}$libdir'
+    hardcode_libdir_separator=:
     ;;
 
   netbsd*)
