--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1672,6 +1672,8 @@ irix5*)
   soname_spec='${libname}${release}.so'
   library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so $libname.so'
   shlibpath_var=LD_LIBRARY_PATH
+  deplibs_check_method="file_magic ELF 32-bit MSB dynamic lib MIPS - version 1" # or should it be pass_all?
+  file_magic_command=file
   ;;
 
 irix6*)
@@ -1681,6 +1683,8 @@ irix6*)
   soname_spec='${libname}${release}.so'
   library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so $libname.so'
   shlibpath_var=LD_LIBRARYN32_PATH
+  deplibs_check_method="file_magic ELF (32-bit|N32|64-bit) MSB mips-[1234] dynamic lib MIPS - version 1" # or should it be pass_all?
+  file_magic_command=file
   ;;
 
 # No shared lib support for Linux oldld, aout, or coff.
