* ltmain.in: Applied Thomas Tanner's latest ild.diff.  This clashes with my change from 1999-02-03 below, but what I had was a bit of a mess, so I also reverted that at the same time. * configure.in: Thomas' latest ILD patch again. * depdemo/Makefile.am: And here.

--- a/configure.in
+++ b/configure.in
@@ -10,8 +10,8 @@ AM_INIT_AUTOMAKE(libtool, 1.2e)
 case "$VERSION" in
 changequote(,)
   *[acegikmoqsuwy]) 
-    TIMESTAMP=`sed 's%.*\$''Revision: \([^$]*\) \$ \$''Date: \([^$]*\) \$.*% (\1 \2)%;t end;d;: end' < ${srcdir}/ChangeLog`
 changequote([,])
+    TIMESTAMP=`${CONFIG_SHELL} ${srcdir}/mkstamp < ${srcdir}/ChangeLog`
     banner="Configuring $PACKAGE $VERSION$TIMESTAMP"
     dashes=`echo "$banner" | sed 's/./-/g'`
 
@@ -41,13 +41,13 @@ AC_PROG_AWK
 
 dnl all subdirectories that are configured on demand, but that must be
 dnl included in the distribution
-CONF_SUBDIRS="libltdl demo mdemo cdemo depdemo"
+CONF_SUBDIRS="libltdl demo mdemo depdemo cdemo"
 AC_SUBST(CONF_SUBDIRS)
 
-ACINCLUDE_M4_LIST="\$(srcdir)/acinclude.m4 "
+ACINCLUDE_M4_LIST="${srcdir}/acinclude.m4 "
 DIST_MAKEFILE_LIST=
 for dir in $CONF_SUBDIRS; do
-  ACINCLUDE_M4_LIST="$ACINCLUDE_M4_LIST\$(srcdir)/$dir/acinclude.m4 "
+  ACINCLUDE_M4_LIST="$ACINCLUDE_M4_LIST${srcdir}/$dir/acinclude.m4 "
   DIST_MAKEFILE_LIST="$DIST_MAKEFILE_LIST$dir/Makefile "
 done
 AC_SUBST(ACINCLUDE_M4_LIST)
