--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -2,21 +2,22 @@ dnl Process this file with autoconf to create configure.
 dnl Initialize the libltdl package.
 AC_INIT(ltdl.c)
 AM_INIT_AUTOMAKE(libltdl,1.0,-)
+AM_CONFIG_HEADER(config.h)
 
 AM_MAINTAINER_MODE
+
+TOINST=toinst
+AC_SUBST(TOINST)
 
 AC_ARG_ENABLE(ltdl-install,
   [--enable-ltdl-install     install libltdl])
 AM_CONDITIONAL(INSTALL_LTDL, test x$enable_ltdl_install = xyes)
 if test x$enable_ltdl_install = xyes; then
-  LIBLIBS=libltdl.la
-  NOINSTLIBS=
+  LIBLIBS=$TOINST/libltdl.la
 else
   LIBLIBS=
-  NOINSTLIBS=libltdl.la
 fi
 AC_SUBST(LIBLIBS)
-AC_SUBST(NOINSTLIBS)
 
 AC_PROG_CC
 AC_C_CONST
@@ -84,11 +85,19 @@ AC_CHECK_FUNCS(strdup strchr strrchr index rindex)
 
 AC_CACHE_CHECK([whether libtool supports -dlopen/-dlpreopen],
        libltdl_cv_preloaded_symbols, [dnl
-  if grep '^global_symbol_pipe=..*$' ./libtool >/dev/null; then
-    libltdl_cv_preloaded_symbols=yes
-  else
-    libltdl_cv_preloaded_symbols=no
-  fi
+  (
+    rm -f conftest
+    ./libtool --config > conftest
+    . ./conftest
+    rm -f conftest
+    if test -n "$global_symbol_pipe"; then
+      echo yes > conftest
+    else
+      echo no > conftest
+    fi
+  )
+  libltdl_cv_preloaded_symbols=`cat conftest`
+  rm -f conftest
 ])
 if test x"$libltdl_cv_preloaded_symbols" = x"yes"; then
   AC_DEFINE(HAVE_PRELOADED_SYMBOLS)
@@ -112,7 +121,7 @@ if test "$test_dlerror" = yes; then
  LIBS="$LIBS_SAVE"
 fi
 
-AM_SYS_SYMBOL_UNDERSCORE
+AC_SYS_SYMBOL_UNDERSCORE
 if test x"$USE_SYMBOL_UNDERSCORE" = xyes; then
   if test x"$ac_cv_func_dlopen" = xyes ||
      test x"$ac_cv_lib_dl_dlopen" = xyes ; then
