--- a/ltmain.in
+++ b/ltmain.in
@@ -1501,8 +1501,6 @@ compiler."
 	fi
 
 	name=`$echo "X$laname" | $Xsed -e 's/\.la$//' -e 's/^lib//'`
-	# FIXME: libraries without lib prefix require direct hardcoding
-	# i.e. for need_lib_prefix=no we require hardcode_direct=yes
 
 	if test -z "$libdir"; then
 	  # It is a libtool convenience library.
@@ -1687,8 +1685,6 @@ compiler."
       if test -n "$hardcode_libdir_separator"; then
 	deplibs=`$echo "X$deplibs" | $Xsed -e "s%@HARDCODE_LIBDIRS@%$hardcode_libdirs%g"`
       fi
-
-      # FIXME: shlibpath must be set in archive_cmds
 
       # Restore the variables
       link_dir=$link_dir_save
@@ -1971,6 +1967,9 @@ EOF
 	  eval cmds=\"$archive_cmds\"
 	fi
 	IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
+	if test -n "$shlibpath"; then
+	  eval "export $shlibpath_var='$shlibpath\$$shlibpath_var'"
+	fi
 	for cmd in $cmds; do
 	  IFS="$save_ifs"
 	  $show "$cmd"
@@ -2687,8 +2686,8 @@ static const void *lt_preloaded_setup() {
       # Delete the old output file.
       $run $rm $output
 
-      if test -n "$compile_shlibpath"; then
-	compile_command="$shlibpath_var=\"$compile_shlibpath\$$shlibpath_var\" $compile_command"
+      if test -n "$shlibpath"; then
+	compile_command="$shlibpath_var=\"$shlibpath\$$shlibpath_var\" $compile_command"
       fi
 
       if test -n "$runpath_var"; then
@@ -2964,6 +2963,12 @@ libdir='$install_libdir'
 link_command=\"$link_command\"
 link_dir=\"$link_dir\"\
 "
+
+	$rm "$output_objdir/$outputname"i
+	sed -e 's/^installed=no$/installed=yes/' \
+	    -e "s%^dependency_libs=\(.*\)%dependency_libs='$newdependency_libs'%" \
+	    -e 's/^link_\(.*\)//' \
+	  < "$output" > "$output_objdir/$outputname"i || exit 1
       fi
 
       # Do a symbolic link so that the libtool archive can be found in
@@ -3229,7 +3234,7 @@ link_dir=\"$link_dir\"\
 	  done
 	  IFS="$save_ifs"
 	fi
-	
+
 	# Replace all uninstalled libtool libraries with the installed ones
 	newdependency_libs=
 	for deplib in $dependency_libs; do
@@ -3248,19 +3253,12 @@ link_dir=\"$link_dir\"\
 	    ;;
 	  esac
 	done
-
+  
 	# Install the pseudo-library for information purposes.
 	name=`$echo "X$file" | $Xsed -e 's%^.*/%%'`
 	instname="$dir/$name"i
-	$show "Creating $instname"
-	$rm "$instname"
-	sed -e 's/^installed=no$/installed=yes/' \
-	    -e "s%^dependency_libs=\(.*\)%dependency_libs='$newdependency_libs'%" \
-	    -e 's/^link_\(.*\)//' "$file" > "$instname"
 	$show "$install_prog $instname $destdir/$name"
 	$run eval "$install_prog $instname $destdir/$name" || exit $?
-	$show "$rm $instname"
-	$rm "$instname"
 
 	# Maybe install the static library, too.
 	test -n "$old_library" && staticlibs="$staticlibs $dir/$old_library"
