* libtool.m4 (AC_CHECK_LIBM): do not set MATHLIB or AC_SUBST it, this has a negative side-effect of causing automake to add MATHLIB to every single Makefile.  Let's use plain AC_CHECK_LIB, so that LIBS get set, until we find a better alternative * *demo/Makefile.am: remove $(MATHLIB)

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -10,7 +10,7 @@ CLEANFILES = $(hardcode_tests)
 # Build a libtool library, libhello.la for installation in libdir.
 lib_LTLIBRARIES = libhello.la
 libhello_la_SOURCES = hello.c foo.c
-libhello_la_LDFLAGS = -version-info 3:12:1 $(MATHLIB)
+libhello_la_LDFLAGS = -version-info 3:12:1
 
 include_HEADERS = foo.h
 
