--- a/ltmain.in
+++ b/ltmain.in
@@ -2151,19 +2151,20 @@ extern \"C\" {
 	    $run eval "$NM $arg | $global_symbol_pipe >> '$nlist'"
 	  done
 
-	  if test -n "$exclude_expsyms"; then
-	    : # TODO: remove symbols from $nlist
-	  fi
-
 	  if test -z "$run"; then
 	    # Make sure we have at least an empty file.
 	    test -f "$nlist" || : > "$nlist"
 
 	    # Try sorting and uniquifying the output.
 	    if sort "$nlist" | uniq > "$nlist"T; then
-	      mv -f "$nlist"T "$nlist"
+	      $mv "$nlist"T "$nlist"
 	    else
 	      $rm "$nlist"T
+	    fi
+
+	    if test -n "$exclude_expsyms"; then
+	      egrep -v "^($exclude_expsyms) " "$nlist" > "$nlist"T
+	      $mv "$nlist"T "$nlist"
 	    fi
 
 	    if test -f "$nlist"; then
@@ -2203,10 +2204,13 @@ lt_preloaded_symbols[] =
 		for arg in $progfiles; do
 		  eval "$NM $arg | $global_symbol_pipe >> '$nlist'"
 		done
-		if test -n "$exclude_expsyms"; then
-		  : # TODO: remove symbols from $nlist
-		fi
+
 		if test -f "$nlist"; then
+		  if test -n "$exclude_expsyms"; then
+		    egrep -v "^($exclude_expsyms) " "$nlist" > "$nlist"T
+		    $mv "$nlist"T "$nlist"
+		  fi
+
 		  sed 's/^\(.*\) \(.*\)$/  {"\1", (lt_ptr_t) \&\2},/' < "$nlist" >> "$output_objdir/$dlsyms"
 		else
 		  echo '/* NONE */' >> "$output_objdir/$dlsyms"
@@ -2220,10 +2224,12 @@ lt_preloaded_symbols[] =
   {\"$name\", (lt_ptr_t) 0},"
 	      eval "$NM $arg | $global_symbol_pipe > '$nlist'"
 
-	      if test -n "$exclude_expsyms"; then
-	        : # TODO: remove symbols from $nlist
-	      fi
 	      if test -f "$nlist"; then
+		if test -n "$exclude_expsyms"; then
+		  egrep -v "^($exclude_expsyms) " "$nlist" > "$nlist"T
+		  $mv "$nlist"T "$nlist"
+		fi
+
 		sed 's/^\(.*\) \(.*\)$/  {"\1", (lt_ptr_t) \&\2},/' < "$nlist" >> "$output_objdir/$dlsyms"
 	      else
 		echo '/* NONE */' >> "$output_objdir/$dlsyms"
